<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Author: Martin Woolley
 * Twitter: @bluetooth_mdw
 *
 *
 *  Licensed under the Apache License, Version 2.0 (the "License");
 *  you may not use this file except in compliance with the License.
 *  You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 */
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="18dp"
        android:text="@string/bluetooth_services"/>

    <TextView
        android:id="@+id/service_generic_access_presence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textStyle="normal"
        android:textSize="18dp"
        android:text="@string/service_generic_access"/>

    <TextView
        android:id="@+id/service_generic_attribute_presence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textStyle="normal"
        android:textSize="18dp"
        android:text="@string/service_generic_attribute"/>

    <TextView
        android:id="@+id/service_device_information_presence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textStyle="normal"
        android:textSize="18dp"
        android:text="@string/service_device_information"/>

    <TextView
        android:id="@+id/service_dfu_control_presence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textStyle="normal"
        android:textSize="18dp"
        android:text="@string/service_dfu_control"/>

    <TextView
        android:id="@+id/service_accelerometer_presence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textStyle="normal"
        android:textSize="18dp"
        android:text="@string/service_accelerometer"/>

    <TextView
        android:id="@+id/service_magnetometer_presence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textStyle="normal"
        android:textSize="18dp"
        android:text="@string/service_magnetometer"/>

    <TextView
        android:id="@+id/service_button_presence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textStyle="normal"
        android:textSize="18dp"
        android:text="@string/service_button"/>

    <TextView
        android:id="@+id/service_io_pin_presence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textStyle="normal"
        android:textSize="18dp"
        android:text="@string/service_io_pin"/>

    <TextView
        android:id="@+id/service_led_presence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textStyle="normal"
        android:textSize="18dp"
        android:text="@string/service_led"/>

    <TextView
        android:id="@+id/service_event_presence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textStyle="normal"
        android:textSize="18dp"
        android:text="@string/service_event"/>

    <TextView
        android:id="@+id/service_temperature_presence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textStyle="normal"
        android:textSize="18dp"
        android:text="@string/service_temperature"/>

    <TextView
        android:id="@+id/service_uart_presence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textStyle="normal"
        android:textSize="18dp"
        android:text="@string/service_uart"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_marginTop="20dp"
        android:text="@string/services_key"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textStyle="normal"
        android:textSize="18dp"
        android:textColor="#228B22"
        android:text="PRESENT on micro:bit"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textStyle="normal"
        android:textSize="18dp"
        android:textColor="#FF0000"
        android:text="NOT PRESENT on micro:bit"/>

</LinearLayout>